--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4141965 */
-  src: url('iconfont.woff2?t=1688697101505') format('woff2'),
-       url('iconfont.woff?t=1688697101505') format('woff'),
-       url('iconfont.ttf?t=1688697101505') format('truetype');
+  src: url('iconfont.woff2?t=1690512331789') format('woff2'),
+       url('iconfont.woff?t=1690512331789') format('woff'),
+       url('iconfont.ttf?t=1690512331789') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-fenxiang:before {
+  content: "\e86e";
+}
+
+.icon-zhishiwenda:before {
+  content: "\e707";
 }
 
 .icon-anzhuang:before {
