--- a/src/app.scss
+++ b/src/app.scss
@@ -4,3 +4,78 @@ page{
     height: 100%;
     background: #ededed;
 }
+
+.model-wrap {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+  }
+  
+  .mask {
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.3);
+  }
+  
+  .model-content {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: unset;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50vh;
+    padding: 40px 0 20px;
+    border-radius: 30rpx;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    background: #fff;
+    box-shadow: 0 0 20px #fff;
+    box-sizing: border-box;
+  
+    .title {
+      position: relative;
+      text-align: center;
+      padding-bottom: 30px;
+      font-weight: bold;
+    }
+  
+    .refresh {
+      position: absolute;
+      right: 50px;
+      color: #e8352c;
+    }
+  
+    .wifi-list {
+      flex: 1;
+      overflow: hidden;
+      overflow-y: auto;
+    }
+  
+    .model-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 30px 40px;
+      border-bottom: 1px solid #e1e1e1;
+    }
+  
+    .footer {
+      text-align: center;
+      padding: 30px 0;
+      border-top: 1px solid #e1e1e1;
+    }
+  
+    .img {
+      width: 50px;
+      height: 60px;
+    }
+  }
+
+  .nut-cell-group .nut-cell::after{
+    border-bottom:none !important;
+}
